--- a/methods.html
+++ b/methods.html
@@ -21,7 +21,9 @@
                         </a>
                     </li>
                     <li class="p-navigation__item">
-                        <button class="js-menu-button p-navigation__link">Menu</button>
+                        <a href="about.html">
+                            <button class="js-menu-button p-navigation__link">О нас</button>
+                        </a>
                     </li>
                 </ul>
             </div>
