--- a/contacts.html
+++ b/contacts.html
@@ -1,11 +1,62 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 
 <head>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <header id="navigation" class="p-navigation is-dark">
+        <div class="p-navigation__row--25-75">
+            <div class="p-navigation__banner">
+                <div class="p-navigation__tagged-logo">
+                    <a class="p-navigation__link" href="#">
+
+                    </a>
+                </div>
+                <ul class="p-navigation__items">
+                    <li class="p-navigation__item">
+                        <a href="index.html">
+                            <button class="js-menu-button p-navigation__link">Главная</button>
+                        </a>
+                    </li>
+                    <li class="p-navigation__item">
+                        <a href="about.html">
+                            <button class="js-menu-button p-navigation__link">О нас</button>
+                        </a>
+                    </li>
+                    <li class="p-navigation__item">
+                        <a href="contacts.html">
+                            <button class="js-menu-button p-navigation__link">Контакты</button>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <nav class="p-navigation__nav" aria-label="Example main">
+                <ul class="p-navigation__items">
+                    <li class="p-navigation__item ">
+                        <a class="p-navigation__link" href="index.html">Главная</a>
+                    </li>
+                    <li class="p-navigation__item">
+                        <a class="p-navigation__link" href="about.html">О нас</a>
+                    </li>
+                    <li class="p-navigation__item">
+                        <a class="p-navigation__link" href="contacts.html">Контакты</a>
+                    </li>
+                </ul>
+                <ul class="p-navigation__items">
+                    <li class="p-navigation__item">
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+
     <title>Безопасность Web-ресурсов</title>
-    <link rel="stylesheet" href="https://assets.ubuntu.com/v1/vanilla-framework-version-3.7.0.min.css">
+    <link rel="stylesheet" href="https://assets.ubuntu.com/v1/vanilla-framework-version-4.16.0.min.css" />
     <link rel="stylesheet" href="css/styles.css">
-</head> 
+</head>
 
 <body>
 
@@ -18,18 +69,39 @@
         <a href="contacts.html">Контакты</a>
     </div>
 
-    <span id="menu-button" onclick="openNav()">&#9776; Меню</span>
+    <span id="menu-button" onclick="openNav()">&#9776;</span>
 
-    <script>
-        function openNav() {
-            document.getElementById("sidenav").style.width = "225px";
-        }
+    <div id="heading-text">
+        <h1>Связь с нами!</h1>
+        <h2>Здесь вы сможете найти наши Контакты.</h2>
+    </div>
 
-        function closeNav() {
-            document.getElementById("sidenav").style.width = "0";
-        }
-    </script>
+    <div id="text">
+        <div class="main-text">&#9742; +79999999999
+        </div>
+        <div class="main-text">&#9993; web-security@bk.ru
+        </div>
+        <div class="main-text">&#127970; г. Сыктывкар, ул. Маяковского, д. 9</div>
 
+        <script>
+            function openNav() {
+                document.getElementById("sidenav").style.width = "225px";
+            }
+
+            function closeNav() {
+                document.getElementById("sidenav").style.width = "0";
+            }
+        </script>
+
+        <footer class="l-footer--sticky p-strip--highlighted">
+            <nav class="row" aria-label="Footer">
+                <div class="has-cookie">
+                    <p>© 2024 Petrik Daniil. Все права защищены</p>
+                    <span class="u-off-screen"><a href="#">Go to the top of the page</a></span>
+                </div>
+            </nav>
+        </footer>
+    </div>
 </body>
 
 </html>
