--- a/danger.html
+++ b/danger.html
@@ -21,7 +21,14 @@
                         </a>
                     </li>
                     <li class="p-navigation__item">
-                        <button class="js-menu-button p-navigation__link">Menu</button>
+                        <a href="about.html">
+                            <button class="js-menu-button p-navigation__link">О нас</button>
+                        </a>
+                    </li>
+                    <li class="p-navigation__item">
+                        <a href="contacts.html">
+                            <button class="js-menu-button p-navigation__link">Контакты</button>
+                        </a>
                     </li>
                 </ul>
             </div>
