--- a/news.html
+++ b/news.html
@@ -1,9 +1,65 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 
 <head>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <header id="navigation" class="p-navigation is-dark">
+        <div class="p-navigation__row--25-75">
+            <div class="p-navigation__banner">
+                <div class="p-navigation__tagged-logo">
+                    <a class="p-navigation__link" href="#">
+
+                    </a>
+                </div>
+                <ul class="p-navigation__items">
+                    <li class="p-navigation__item">
+                        <a href="index.html">
+                            <button class="js-menu-button p-navigation__link">Главная</button>
+                        </a>
+                    </li>
+                    <li class="p-navigation__item">
+                        <a href="about.html">
+                            <button class="js-menu-button p-navigation__link">О нас</button>
+                        </a>
+                    </li>
+                    <li class="p-navigation__item">
+                        <a href="contacts.html">
+                            <button class="js-menu-button p-navigation__link">Контакты</button>
+                        </a>
+                    </li>
+                    <li class="p-navigation__item">
+                        <a href="contacts.html">
+                            <button class="js-menu-button p-navigation__link">Контакты</button>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <nav class="p-navigation__nav" aria-label="Example main">
+                <ul class="p-navigation__items">
+                    <li class="p-navigation__item ">
+                        <a class="p-navigation__link" href="index.html">Главная</a>
+                    </li>
+                    <li class="p-navigation__item">
+                        <a class="p-navigation__link" href="about.html">О нас</a>
+                    </li>
+                    <li class="p-navigation__item">
+                        <a class="p-navigation__link" href="contacts.html">Контакты</a>
+                    </li>
+                </ul>
+                <ul class="p-navigation__items">
+                    <li class="p-navigation__item">
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+
     <title>Безопасность Web-ресурсов</title>
-    <link rel="stylesheet" href="https://assets.ubuntu.com/v1/vanilla-framework-version-3.7.0.min.css">
+    <link rel="stylesheet" href="https://assets.ubuntu.com/v1/vanilla-framework-version-4.16.0.min.css" />
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -18,18 +74,61 @@
         <a href="contacts.html">Контакты</a>
     </div>
 
-    <span id="menu-button" onclick="openNav()">&#9776; Меню</span>
+    <span id="menu-button" onclick="openNav()">&#9776;</span>
 
-    <script>
-        function openNav() {
-            document.getElementById("sidenav").style.width = "225px";
-        }
+    <div id="heading-text">
+        <h1>Новости о безопасности web-ресурсов"</h1>
+    </div>
 
-        function closeNav() {
-            document.getElementById("sidenav").style.width = "0";
-        }
-    </script>
+    <div id="text">
+        <ul class="p-list--divided">
+            <li class="p-list__item">
+                <div class="p-media-object--large">
+                    <img src="https://www.anti-malware.ru/files/images/source/web-security-field.png"
+                        class="p-media-object__image" alt="">
+                    <div class="p-media-object__details">
+                        <a href="https://habr.com/ru/companies/bizone/articles/844802/">
+                            <h3>Эволюция атак на веб-ресурсы: что поменялось с 2011 года
+                            </h3>
+                        </a>
+                        <ul class="p-media-object__meta-list">
+                        </ul>
+                    </div>
+                </div>
+            </li>
+            <li class="p-list__item">
+                <div class="p-media-object--large">
+                    <img src="https://media.proglib.io/wp-uploads/-000//1/59c68cd9af2df_Security_Laptop-1.png"
+                        class="p-media-object__image" alt="">
+                    <div class="p-media-object__details">
+                        <a href="https://www.securitylab.ru/analytics/552468.php">
+                            <h3>Мониторинг веб-сайта – тайное оружие в успехе вашего онлайн-бизнеса
+                            </h3>
+                        </a>
+                        <ul class="p-media-object__meta-list">
+                        </ul>
+                    </div>
+                </div>
+            </li>
+            <script>
+                function openNav() {
+                    document.getElementById("sidenav").style.width = "225px";
+                }
 
+                function closeNav() {
+                    document.getElementById("sidenav").style.width = "0";
+                }
+            </script>
+
+            <footer class="l-footer--sticky p-strip--highlighted">
+                <nav class="row" aria-label="Footer">
+                    <div class="has-cookie">
+                        <p>© 2024 Petrik Daniil. Все права защищены</p>
+                        <span class="u-off-screen"><a href="#">Go to the top of the page</a></span>
+                    </div>
+                </nav>
+            </footer>
+    </div>
 </body>
 
 </html>
