--- a/contacts.html
+++ b/contacts.html
@@ -77,11 +77,24 @@
     </div>
 
     <div id="text">
+        <div class="main-text">Мы рады, что вы заинтересовались вопросами безопасности веб-ресурсов! Если у вас есть
+            вопросы, предложения или вы хотите обсудить, как мы можем помочь вам защитить ваши данные и веб-приложения,
+            пожалуйста, свяжитесь с нами.</div>
+        <div class="main-text"><b>Свяжитесь с нами</b></div>
         <div class="main-text">&#9742; +79999999999
         </div>
         <div class="main-text">&#9993; web-security@bk.ru
         </div>
         <div class="main-text">&#127970; г. Сыктывкар, ул. Маяковского, д. 9</div>
+        <div class="main-text"><b>Социальные сети</b></div>
+        <ul class="p-list--divided">
+            <li class="p-list__item has-bullet">
+                <a href="https://vk.com/mellzz122">Вконтакте</a>
+            </li>
+            <li class="p-list__item has-bullet">
+                <a href="https://steamcommunity.com/id/mellzz1">Steam</a>
+            </li>
+        </ul>
 
         <script>
             function openNav() {
